# snail

./: .clangd  .gitignore  LICENSE  README.md  demo.html  demo.js  esbuild.js  game.html  handler.js  index.html  package-lock.json  package.json  playwright.config.ts  sdk.md  webpack.config.js
Terminal/: AppDelegate.h  AppDelegate.m  BrowserView.h  BrowserView.m  D4ContextMenu.h  D4ContextMenu.m  D4WebPanel.h  D4WebPanel.m  NSObject+KVOBlock.h  NSObject+KVOBlock.m  NodeTalker.h  NodeTalker.m  ViewController.h  ViewController.m  Window.storyboard  main.m
Terminal.xcodeproj/: project.pbxproj
TerminalTests/: TerminalTests.m
TerminalUITests/: TerminalUITests.m  TerminalUITestsLaunchTests.m
datagrid/: datagrid.css  datagrid.ts
debugger/: Console.ts  Elements.ts  FileTree.ts  Sources.ts  TargetManager.ts  elements.css  index.js  sources.css  web.ts
editor/: .gitignore  i  index.html  inline.html  jsconfig.json  package.json  tsconfig.json
electron/: browserView-preload.js  index.html  index.js  preload.js
electron-dev/: index.js
game/: GameHost.ts  dungeon.ts  game-iframe.html  game-iframe.ts  game.worker.ts  makeWebExecutor.ts  monster-iframe.ts  path.ts  pathway-iframe.ts  reset-iframe.css  reset-iframe.ts  runtimeHandler.ts  top-level-await.ts  workers.d.ts
host/: ProtocolProxy.js  ShellHost.d.ts  WebServers.js  index.js  preloadJSShell.js
icon/: icon.icns
icon_service/: seti.ts
iframe/: iframe.css  iframe.js  runtime.js  types.d.ts
manpage_reader/: index.js
python_sdk/: README.md  pyproject.toml
python_sdk/snail_sdk/: __init__.py
(+561 files in other folders)
