[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "snail_sdk"
version = "0.7.5"
authors = [
  { name="Joel Einbinder", email="joel.einbinder@gmail.com" },
]
description = "SDK for snail"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JoelEinbinder/snail"
"Bug Tracker" = "https://github.com/JoelEinbinder/snail/issues"
